@@ -3,13 +3,13 @@ Section: libdevel
 Priority: optional
 Maintainer: Matias Muhonen <ext-matias.muhonen@nokia.com>
 Uploaders: Philippe De Swert <philippe.de-swert@nokia.com>
-Build-Depends: debhelper (>=5), libqt4-dev (>= 4.5), libsensord-dev (>= 0.6.33), libiphb-dev (>= 0.1.4), doxygen, mce-dev (>= 1.10.15), libdbus-1-dev, libgconf2-dev, libbmeipc0 (>= 0.9.93), libbmeipc-dev (>= 0.9.93), libdsme0.2.0, libdsme0.2.0-dev, libtimed-dev (>= 2.31), libtimed-voland-dev (>= 2.31), usb-moded-dev (>= 0.28), aegis-builder (>= 1.4), libsysinfo-dev (>= 1.0.17)
+Build-Depends: debhelper (>=5), libqt4-dev (>= 4.5), libsensord-dev (>= 0.6.33), libiphb-dev (>= 0.61.31), doxygen, mce-dev (>= 1.10.15), libdbus-1-dev, libgconf2-dev, libbmeipc0 (>= 0.9.93), libbmeipc-dev (>= 0.9.93), libdsme0.2.0, libdsme0.2.0-dev, libtimed-dev (>= 2.31), libtimed-voland-dev (>= 2.31), usb-moded-dev (>= 0.28), aegis-builder (>= 1.4), libsysinfo-dev (>= 1.0.17)
 Standards-Version: 3.7.3
 
 Package: libqmsystem2
 Section: libs
 Architecture: any
-Depends: sensord (>= 0.6.33), timed (>= 2.31), libiphb0 (>= 0.1.4), bme (>= 0.9.93), ${shlibs:Depends}, ${misc:Depends}, libqt4-network (>= 4.5), libqt4-dbus (>= 4.5), libgconf2-6, libbmeipc0 (>= 0.9.93), libdsme0.2.0, libtimed0 (>= 2.31), libsysinfo0 (>= 1.0.17)
+Depends: sensord (>= 0.6.33), timed (>= 2.31), libiphb0 (>= 0.61.31), bme (>= 0.9.93), ${shlibs:Depends}, ${misc:Depends}, libqt4-network (>= 4.5), libqt4-dbus (>= 4.5), libgconf2-6, libbmeipc0 (>= 0.9.93), libdsme0.2.0, libtimed0 (>= 2.31), libsysinfo0 (>= 1.0.17)
 Recommends: usetime (>= 0.3.7)
 Description: QmSystem library
  This package contains the QmSystem library.
