@@ -48,18 +48,26 @@ class QmHeartbeatPrivate;
  * @class QmHeartbeat
  * @brief QmHeartbeat provides the system heartbeat service.
  * @details System heartbeat is a service for applications to synchronize their
- * activities to save the battery use time. 
- * <br>
+ * activities to save the battery use time.
+ * <p>
  * The main idea is that applications that must do periodic activity – after being
- * in sleep a certain period – do that at the same time: for example 
- * send network “alive” messages at the same time (for example turn the wireless radio on 
- * at the same time). 
- * <br>
- * The service is not only for network-aware applications: in fact it must be used 
+ * in sleep a certain period – do that at the same time: for example
+ * send network “alive” messages at the same time (for example turn the wireless radio on
+ * at the same time).
+ * </p>
+ * <p>
+ * The service is not only for network-aware applications: in fact it must be used
  * by any applications that need to periodic wake-ups.
- * <br>
- * Note: the Qt Mobility System Information API provides the class <A HREF="http://doc.qt.nokia.com/qt-mobility-snapshot/qsystemalignedtimer.html">QSystemAlignedTimer</a>
-*  with similar functionality.
+ * </p>
+ * <p>
+ * "Global sync" predefined values (slots), see wait(unsigned short, unsigned short, QmHeartbeat::WaitMode) function.
+ * The timeline is divided into "fixed global slots (GS)" (all waiters for a certain slot
+ * are woken up at the same time (also the lower-value waiters).
+ * </p>
+ * <p>
+ * Note: the Qt Mobility System Information API provides the class QSystemAlignedTimer
+ * with similar functionality.
+ * </p>
  */
 class QmHeartbeat : public QObject
 {
@@ -82,7 +90,41 @@ public:
         WaitHeartbeat            //!< Wait for heart beat
     };
 
-public:
+    /*!
+     * @brief 30 second wakeup slot
+     */
+    static const unsigned short WAKEUP_SLOT_30_SEC;
+    /*!
+     * @brief 2.5 minute wakeup slot, the users of the previous slots wake here as well
+     */
+    static const unsigned short WAKEUP_SLOT_2_5_MINS;
+    /*!
+     * @brief 5 minute wakeup slot, the users of the previous slots wake here as well
+     */
+    static const unsigned short WAKEUP_SLOT_5_MINS;
+    /*!
+     * @brief 10 minute wakeup slot, the users of the previous slots wake here as well;
+     * you can use any multiplication of WAKEUP_SLOT_10_MINS, although it is recommended
+     * to use these predefined values
+     */
+    static const unsigned short WAKEUP_SLOT_10_MINS;
+    /*!
+     * @brief 30 minute wakeup slot, the users of the previous slots wake here as well
+     */
+    static const unsigned short WAKEUP_SLOT_30_MINS;
+    /*!
+     * @brief 1 hour wakeup slot, the users of the previous slots wake here as well
+     */
+    static const unsigned short WAKEUP_SLOT_1_HOUR;
+    /*!
+     * @brief 2 hours wakeup slot, the users of the previous slots wake here as well
+     */
+    static const unsigned short WAKEUP_SLOT_2_HOURS;
+    /*!
+     * @brief 10 hours wakeup slot, the users of the previous slots wake here as well
+     */
+    static const unsigned short WAKEUP_SLOT_10_HOURS;
+
     /*!
      * @brief Constructor
      * @param parent The parent object
@@ -115,12 +157,15 @@ public:
      * @brief Waits for the next heartbeat.
      *
      * @param mintime   Time in seconds that MUST be waited before heartbeat is reacted to.
-     *                  Value 0 means 'wake me up when someboy else is woken'. 
+     *                  Value 0 means 'wake me up when someboy else is woken'.
      *                  It  is recommended that the first wait (if possible) uses minvalue as 0 to "jump to the train"
      * @param maxtime   Time in seconds when the wait MUST end. It is wise to have maxtime-mintime
      *                  quite big so all users of this service get synced.
      *                  For example if you preferred wait is 120 seconds, use minval 110 and maxval 130.
-     * @param wait      WaitHeartbeat if this method waits for heartbeat, DoNotWaitHeartbeat 
+     *                  It is also possible to use "global synchronization" by setting a WAKEUP_SLOT_* value to
+     *                  both mintime and maxtime (same value for both) - you will be waken up when the next proper slot
+     *                  is fired.
+     * @param wait      WaitHeartbeat if this method waits for heartbeat, DoNotWaitHeartbeat
      *                  if the wakeUp signal or file descriptor for QSocketNotifier is used
      *
      * @return          Time waited
